<resources>
    <string name="app_name" translatable="false">MIUIQuickOpen</string>
    <string name="pref_name" translatable="false">data</string>
    <string name="pref_title">MIUIQuickOpen</string>
    <string name="pref_top_title_text">instructions</string>
    <string name="pref_top_title_summary">SystemUI needs to be restarted or will take effect after restarting (restart SystemUI in upper right corner)</string>
    <string name="pref_app_setting_title_text">app settings</string>
    <string name="hide_app_icon_text">hide app icon</string>
    <string name="hide_app_icon_on_summary">Has hidden app icon,it can be opened in the xposed module manager</string>
    <string name="hide_app_icon_off_summary">not hide app icon</string>
    <string name="app_status_text">APP activation status</string>
    <string name="app_status_on_summary">activated</string>
    <string name="app_status_off_summary">inactivated</string>

    <string name="pref_title_text">QuickOpenItem</string>
    <string name="wechat_pay_title">WechatPay</string>
    <string name="wechat_scan_title">WechatScan</string>
    <string name="xiaoai_title">Xiaoai</string>
    <string name="alipay_pay_title">AlipayPay</string>
    <string name="alipay_scan_title">AlipayScan</string>
    <string name="add_event_title">AddEvent</string>
    <string name="add_note_title">AddNote</string>
    <string name="dialer_title">Dialer</string>
    <string name="qr_code_title">QRCode</string>
    <string name="search_title">Search</string>
    <string name="menu_reboot_systemui">reboot SystemUI</string>
    <string name="menu_about_title">About</string>
    <string name="dialog_about_message">I\'m lamprose(离司@CoolApk)</string>

    <string name="app_status_key" translatable="false">appStatus</string>
    <string name="hide_app_icon_key" translatable="false">hideAppIcon</string>
    <string name="wechat_pay_key" translatable="false">WechatPayItem</string>
    <string name="wechat_scan_key" translatable="false">WechatScanItem</string>
    <string name="xiaoai_key" translatable="false">XiaoaiItem</string>
    <string name="alipay_pay_key" translatable="false">AlipayPayItem</string>
    <string name="alipay_scan_key" translatable="false">AlipayScanItem</string>
    <string name="add_event_key" translatable="false">AddEventItem</string>
    <string name="add_note_key" translatable="false">AddNoteItem</string>
    <string name="dialer_key" translatable="false">DialerItem</string>
    <string name="qr_code_key" translatable="false">QrCodeItem</string>
    <string name="search_key" translatable="false">SearchItem</string>



</resources>